Updated configurations.